# python_example_package

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release.yml
cpp/: CMakeLists.txt  helloworld.cpp
git-hooks/: .pre-commit-config.yaml
git-hooks/config/: .isort.cfg  mypy.ini  pydocstyle.ini  pylint.ini
src/zionnamespacepackage/: ProcessWithException.py  people.csv  people_dataclass.py
src/zionnamespacepackage/effectivepython/: __init__.py  getattr_getattribute_setattr.py
src/zionnamespacepackage/firstpackage/: __init__.py  learn_dataclass_module.py  main.py
src/zionnamespacepackage/secondpackage/: __init__.py  main.py
tests/: conftest.py  test_cli.py
